2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/haiku/getroot.c (grub_util_find_partition_start_os):
	Avoid division by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/generic/rtc_get_time_ms.c (grub_rtc_get_time_ms): Avoid
	division by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/xnu.c (guessfsb): Avoid division by 0.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/i386/tsc.c (calibrate_tsc): Ensure that
	no division by 0 occurs.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/misc.h (grub_div_roundup): Remove as it's unused.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c: Avoid division by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid division by zero in serial.

	* grub-core/term/serial.c (grub_cmd_serial): Ensure speed is not 0.
	* grub-core/term/ns8250.c (serial_get_divisor): Exit if speed is 0.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/video/readers/jpeg.c: Avoid sivision by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c: Validate volumes to avoid division
	by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/term.h: Avoid returining 0-sized terminal
	as it may lead to division by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs.c: Avoid divisions by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c: Avoid divisions by zero.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/pbkdf2.c (grub_crypto_pbkdf2): Check that hash len is not 0.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/osdep/linux/blocklist.c (grub_install_get_blocklist): Check
	blocksize validity.

2015-01-20  Vladimir Serbinenko  <phcoder@gmail.com>
